--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <header>
+        <h2 class="text-6xl">Hunting Phone</h2>
+    </header>
+    <main>
+        <section>
+            <!-- Phone Container -->
+            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+               
+            </div>
+        </section>
+    </main>
     <script src="js/phone.js"></script>
 </body>
 </html>
