Conditional show all btn

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                
             </div>
+            <!-- show all phone btn -->
+            <div id="show-all-container" class="hidden mx-auto">
+                <button onclick="" class="btn btn-accent">Show all</button>
+            </div>
         </section>
     </main>
     <script src="js/phone.js"></script>
