Added Loading spinner

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
         <!-- Search result -->
         <section>
+            <!-- spinner or loader -->
+            <div id="loading-spinner" class="text-center my-40 hidden">
+                <span class="loading loading-dots text-blue-400 loading-lg"></span>
+            </div>
             <!-- Phone Container -->
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                
