Implement Show All button to display all data

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                
             </div>
             <!-- show all phone btn -->
-            <div id="show-all-container" class="hidden mx-auto">
-                <button onclick="" class="btn btn-accent">Show all</button>
+            <div id="show-all-container" class="hidden text-center my-5">
+                <button id="show-all" onclick="handleShowAll()" class="btn btn-accent">Show all</button>
             </div>
         </section>
     </main>
