--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <header>
         <h2 class="text-6xl">Hunting Phone</h2>
@@ -32,14 +34,29 @@
             </div>
             <!-- Phone Container -->
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-               
+
             </div>
             <!-- show all phone btn -->
             <div id="show-all-container" class="hidden text-center my-5">
                 <button id="show-all" onclick="handleShowAll()" class="btn btn-accent">Show all</button>
             </div>
         </section>
+
+        <!-- Show details Modal -->
+        <!-- Open the modal using ID.showModal() method -->
+        <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <form method="dialog" class="modal-box">
+                <h3 class="font-bold text-lg">Hello!</h3>
+                <p class="py-4">Press ESC key or click the button below to close</p>
+                <div class="modal-action">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                </div>
+            </form>
+        </dialog>
     </main>
     <script src="js/phone.js"></script>
 </body>
+
 </html>
