--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 
         <!-- Show details Modal -->
         <!-- Open the modal using ID.showModal() method -->
-        <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+        <!-- <button class="btn" onclick="">open modal</button> -->
         <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
-                <h3 class="font-bold text-lg">Hello!</h3>
-                <p class="py-4">Press ESC key or click the button below to close</p>
+                <h3 id="phone-name" class="font-bold text-lg">Hello!</h3>
+                <div id="show-details-container" class="my-5 flex flex-col justify-center items-center gap-2">
+
+                </div>
                 <div class="modal-action">
                     <!-- if there is a button in form, it will close the modal -->
                     <button class="btn">Close</button>
